Sidebar  Menu Added

--- a/application/home.html
+++ b/application/home.html
@@ -488,38 +488,39 @@
       </div> -->
 
       <!-- Application nav -->
-      <div class="nav-application side-nav-application">
-        <ul>
-          <li>
-            <span class="btn-inner--icon d-block"><i class="fas fa-home fa-2x"></i></span>
-            <span class="btn-inner--icon d-block pt-2">Home</span>
-            <ul class="sub-side-menu">
-              <li>
-                Company Structure
-              </li>
-              <li>
-                Company Structure
-              </li>
-              <li>
-                Company Structure
-              </li>
-              <li>
-                Company Structure
-              </li>
-            </ul>
-          </li>
-        </ul>
-        <ul>
-          <li>
-            <span class="btn-inner--icon d-block"><i class="fas fa-home fa-2x"></i></span>
-            <span class="btn-inner--icon d-block pt-2">Home</span>
-            <ul class="sub-side-menu">
-              <li>
-                Company Structure
-              </li>
-            </ul>
-          </li>
-        </ul>
+      <div class="nav-application side-nav-application d-flex justify-content-start">
+        <div class="left-sidbar">
+          <button class="home active"><i class="fas fa-home fa-2x"></i><br>
+            <p>Ant <br> Home</p>
+          </button>
+          <button class="hr-man"><i class="fas fa-project-diagram fa-2x"></i><br>
+            <p>HR Management</p>
+          </button>
+          <button class="anthil-man"><i class="fas fa-home fa-2x"></i><br>
+            <p>Anthill Management</p>
+          </button>
+          <button class="project-man"><i class="fas fa-project-diagram fa-2x"></i><br>
+            <p>Project Management</p>
+          </button>
+          <button class="finance-man"><i class="fas fa-home fa-2x"></i><br>
+            <p>Finance Management</p>
+          </button>
+          <button class="lead-gen"><i class="fas fa-project-diagram fa-2x"></i><br>
+            <p>Lead Generation</p>
+          </button>
+          <button class="content-man"><i class="fas fa-home fa-2x"></i><br>
+            <p>Content Management</p>
+          </button>
+          <button class="client-man"><i class="fas fa-project-diagram fa-2x"></i><br>
+            <p>Client Management</p>
+          </button>
+          <button class="presentation"><i class="fas fa-home fa-2x"></i><br>
+            <p>Presentation Maker</p>
+          </button>
+        </div>
+        <div class="menu-sidebar">
+
+        </div>
       </div>
 
 
@@ -1517,6 +1518,10 @@
   <script src="../assets/js/purpose.js"></script>
   <!-- Demo JS - remove it when starting your project -->
   <script src="../assets/js/demo.js"></script>
+  <!-- JQuery Link -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <!-- Custom JS -->
+  <script src="../assets/customjs/customjs.js"></script>
 </body>
 
 </html>
